@@ -53,6 +53,7 @@ autohdr.test \
 autohdr2.test \
 autohdr3.test \
 autohdr4.test \
+automake.test \
 auxdir.test \
 auxdir2.test \
 auxdir3.test \
