@@ -27,7 +27,12 @@ set -e
 $ACLOCAL --output=fred
 test -f fred
 
+$ACLOCAL --output 2>stderr && exit 1
+grep 'option.*--output.*an argument' stderr
+grep help stderr
+
 $ACLOCAL --unknown-option 2>stderr && exit 1
+grep 'unrecognized.*--unknown-option' stderr
 grep help stderr
 
 test "`$ACLOCAL --print-ac-dir`" = "$testaclocaldir"
